--- a/RFCRestyle/manifest.json
+++ b/RFCRestyle/manifest.json
@@ -2,7 +2,7 @@
 	"manifest_version": 2,
 	"name": "RFCRestyle",
 	"description": "Control the aesthetics and improve the navigability of HTML ietf.org RFC and Draft docs. Optional automatic redirects from TXT docs.",
-	"version": "2.0.3",
+	"version": "2.0.6",
 	"offline_enabled": false,
 	"permissions": [ 
 		"tabs",
@@ -24,9 +24,7 @@
 		"128": "icon128.png"
 	},
 	"background": {
-		"scripts": [
-			"background.js"
-		],
+		"scripts": [ "background.js" ],
 		"persistent": false
 	},
 	"content_scripts": [ {
@@ -38,9 +36,7 @@
 				"https://tools.ietf.org/html/rfc*",
 				"https://tools.ietf.org/html/draft-*"
 			],
-			"js": [
-				"init.js"
-			]
+			"js": [ "init.js" ]
 		}
 	]
 }
