--- a/RFCRestyle/manifest.json
+++ b/RFCRestyle/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "RFCRestyle",
   "description": "Control the aesthetics and improve the navigability of HTML ietf.org RFC and Draft docs. Optional automatic redirects from TXT docs.",
-  "version": "2.0.8",
+  "version": "2.1",
   "offline_enabled": false,
   "permissions": [ 
     "tabs",
@@ -32,11 +32,22 @@
         "https://www.ietf.org/rfc/rfc*",
         "https://www.ietf.org/id/draft-*",
         "https://tools.ietf.org/rfc/rfc*",
-        "https://tools.ietf.org/id/draft-*",
         "https://tools.ietf.org/html/rfc*",
+        "https://tools.ietf.org/id/draft-*",
         "https://tools.ietf.org/html/draft-*"
       ],
       "js": [ "init.js" ]
+    },
+    {
+      "matches": [
+        "https://www.ietf.org/rfc/bcp-index.txt",
+        "https://www.ietf.org/download/rfc-index.txt"
+      ],
+      "js": [ "index.js" ]
+    },
+    {
+      "matches": [ "https://tools.ietf.org/html/bcp*" ],
+      "js": [ "bcp.js" ]
     }
   ]
 }
